[package]
name = "indices"
description = "Indices provides macros and methods for safely retrieving multiple mutable indices from a mutable slice, addressing scenarios where slice elements would typically require `RefCell` or `Cell`."
version = "0.3.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mcmah309/indices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
trybuild = "^1.0.91"