[package]
name = "indices"
description = "Indices provides macros and methods for safely retrieving multiple mutable elements from a mutable slice, addressing scenarios where slice elements would typically require `RefCell` or `Cell` (interior mutability approach)."
version = "0.3.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mcmah309/indices"

[package.metadata]
rust-version = "1.79.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
trybuild = "^1.0.91"